# feishu-docx2

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  README_zh.md  main.py  pyproject.toml
.github/workflows/: publish.yml
.skills/feishu-docx/: SKILL.md
.skills/feishu-docx2/: SKILL.md
docs/: drive-management.md
feishu_docx/: __init__.py
feishu_docx/cli/: cmd_drive.py  cmd_write.py  common.py  main.py
feishu_docx/core/parsers/: document.py
feishu_docx/core/sdk/: __init__.py  media.py
feishu_docx2/: __init__.py
feishu_docx2/auth/: __init__.py  oauth.py  templates.py  tenant.py
feishu_docx2/cli/: CLAUDE.md  __init__.py  cmd_apaas.py  cmd_auth.py  cmd_config.py  cmd_drive.py  cmd_export.py  cmd_export_browser.py  cmd_tui.py  cmd_write.py  common.py  main.py
feishu_docx2/core/: __init__.py  exporter.py  sdk.py  wechat_importer.py  writer.py
feishu_docx2/core/browser_export/: __init__.py  browser_asset_downloader.py  browser_document_extractor.py  browser_document_model.py  browser_fallback_error.py  browser_markdown_exporter.py  browser_markdown_parser.py
feishu_docx2/core/converters/: __init__.py  md_to_blocks.py
feishu_docx2/core/parsers/: __init__.py  bitable.py  document.py  sheet.py
feishu_docx2/core/sdk/: CLAUDE.md  __init__.py  apaas.py  base.py  bitable.py  contact.py  docx.py  drive.py  media.py  sheet.py  wiki.py
feishu_docx2/schema/: __init__.py  code_style.py  models.py
feishu_docx2/tui/: CLAUDE.md  __init__.py  app.py  constants.py  styles.py
feishu_docx2/utils/: __init__.py  config.py  console.py  progress.py  render_table.py
