[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
dynamic = ["version"]
name = "feishu-docx2"
description = "Export Feishu/Lark cloud documents to Markdown"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
keywords = ["feishu", "lark", "markdown", "export", "document", "飞书"]
authors = [{ name = "leemysw" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
    "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = [
    "lark-oapi>=1.4.24",
    "pydantic>=2.0",
    "typer[all]>=0.12.0",
    "textual>=0.85.0",
    "rich>=13.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "markdownify>=0.13.1",
    "mistune>=3.0",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6", "mypy>=1.10"]

[project.scripts]
feishu-docx2 = "feishu_docx2.cli.main:app"

[project.urls]
Homepage = "https://github.com/zhongdajun002-debug/feishu-docx2"
Repository = "https://github.com/zhongdajun002-debug/feishu-docx2.git"
Documentation = "https://github.com/zhongdajun002-debug/feishu-docx2#readme"

[tool.hatch.build.targets.sdist]
include = ["feishu_docx2"]

[tool.hatch.build.targets.wheel]
packages = ["feishu_docx2"]

[tool.hatch.version]
source = "vcs"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
